# Trab_grup_OH

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: OH_ProjetoFinal-checkpoint.ipynb
codigo/: main.ipynb  organized.py
codigo/OLD/: comObjetos.ipynb  doFreitas.ipynb
notebooks/: OH_ProjetoFinal.ipynb  main.ipynb  organized.py  rascunho.ipynb  rewrite.py  sugestao.ipynb
notebooks/OLD/: comObjetos.ipynb
outros/: Algoritmo_genetico_exemplo_2.ipynb
praprof/: OH - Final.docx  main.ipynb
