[tool.poetry]
name = "oh"
version = "1.0"
description = "Trabalho de grupo de OH"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
ipykernel = "^6.23.1"
plotnine = "^0.12.1"
pandas = "^2.0.2"
fslash = "^0.17.0"
pampy = "^0.3.0"
ordered-set = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
